--- a/src/components/Backgrounds/Galaxy/Galaxy.css
+++ b/src/components/Backgrounds/Galaxy/Galaxy.css
@@ -26,3 +26,9 @@ html, body, #root {
   text-align: center; 
   z-index: 10;        
 }
+.text-box {
+  background-color: #FAEB92;
+  padding: 50px;
+  border-radius: 10px;
+  position: absolute;
+}
